--- a/app/index.css
+++ b/app/index.css
@@ -2,12 +2,45 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-* {
-  scroll-behavior: smooth;
-}
-html {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-  height: 100vh;
+@layer utilities {
+  * {
+    scroll-behavior: smooth;
+  }
+  html {
+    --tw-bg-opacity: 1;
+    background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+    height: 100vh;
+  }
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  ::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
+  ::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: rgb(179, 179, 179);
+    border-radius: 10px;
+  }
+  .small-scrollbar::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+  }
+  .search-hover {
+    border: 1px solid #ccc;
+    outline: none;
+    background-size: 22px;
+    background-position: 13px;
+    border-radius: 6px;
+    transition: all 0.5s;
+  }
+  .search-hover:hover {
+    width: 80%;
+    padding-left: 50px;
+  }
+  .search-hover:focus {
+    width: 100%;
+    padding-left: 50px;
+  }
 }
