--- a/app/index.css
+++ b/app/index.css
@@ -2,16 +2,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@layer utilities {
+
+@layer base {
   * {
     scroll-behavior: smooth;
   }
   html {
-    --tw-bg-opacity: 1;
-    background-color: rgb(242 242 241 / var(--tw-bg-opacity));
-    height: 100vh;
+    /* @apply bg-gray-100; */
+    height: 100%;
+    width: 100%;
   }
-  /* Hide scrollbar for Chrome, Safari and Opera */
   ::-webkit-scrollbar {
     width: 10px;
     height: 10px;
@@ -23,6 +23,9 @@
     background-color: rgb(179, 179, 179);
     border-radius: 10px;
   }
+}
+
+@layer utilities {
   .small-scrollbar::-webkit-scrollbar {
     width: 5px;
     height: 5px;
