--- a/app/index.css
+++ b/app/index.css
@@ -2,7 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* width */
 @layer base {
   * {
     scroll-behavior: smooth;
@@ -12,23 +12,35 @@
     height: 100%;
     width: 100%;
   }
+
   ::-webkit-scrollbar {
     width: 10px;
-    height: 10px;
   }
+
+  /* Track */
   ::-webkit-scrollbar-track {
-    background-color: #f1f1f1;
+    background: #f1f1f1;
+
+    @apply dark:bg-[#575757];
   }
+
+  /* Handle */
   ::-webkit-scrollbar-thumb {
-    background-color: rgb(179, 179, 179);
-    border-radius: 10px;
+    background: #888;
+    @apply dark:bg-[#272727];
+    border-radius: 5px;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+    @apply dark:bg-[#1f1f1f];
   }
 }
 
 @layer utilities {
   .small-scrollbar::-webkit-scrollbar {
     width: 5px;
-    height: 5px;
   }
   .preview-scrollbar::-webkit-scrollbar-track {
     margin-top: 30px;
